# nimble_test

./: README.md  app.py  pyproject.toml
config/: config.py
db_config/: config.py
migrations/versions/: 5f33ce54270c_delet_key_row_in_db_table.py
rest_api/: __init__.py  models.py  routes.py
rest_api/libs/: swagger.py  swagger.yaml
rest_api/resources/: bin.py
rest_api/tests/: conftest.py  test_bin_api.py
